- Updates launch storyboard with larger PDF logo asset - Makes the app universal

--- a/EyeSpeak/Supporting Files/Base.lproj/LaunchScreen.storyboard
+++ b/EyeSpeak/Supporting Files/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <device id="retina4_7" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,15 +17,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="WJW-kU-S94">
-                                <rect key="frame" x="222.5" y="157.5" width="222" height="60"/>
+                                <rect key="frame" x="250" y="104" width="167" height="167"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="WJW-kU-S94" secondAttribute="height" multiplier="37:10" id="iJt-fU-AiM"/>
+                                    <constraint firstAttribute="width" secondItem="WJW-kU-S94" secondAttribute="height" multiplier="1:1" id="MDJ-pG-7tC"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.2196078431372549" green="0.19215686274509802" blue="0.62745098039215685" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" name="Background"/>
                         <constraints>
-                            <constraint firstItem="WJW-kU-S94" firstAttribute="width" secondItem="98A-gK-Ioc" secondAttribute="width" multiplier="1:3" id="8rK-on-vs5"/>
+                            <constraint firstItem="WJW-kU-S94" firstAttribute="width" secondItem="98A-gK-Ioc" secondAttribute="width" multiplier="1:4" id="8rK-on-vs5"/>
                             <constraint firstItem="WJW-kU-S94" firstAttribute="centerY" secondItem="98A-gK-Ioc" secondAttribute="centerY" id="aVh-o1-7SQ"/>
                             <constraint firstItem="WJW-kU-S94" firstAttribute="centerX" secondItem="98A-gK-Ioc" secondAttribute="centerX" id="hfA-Z2-sbY"/>
                         </constraints>
@@ -37,6 +38,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="60" height="60"/>
+        <image name="logo" width="512" height="455"/>
+        <namedColor name="Background">
+            <color red="0.12800000607967377" green="0.10899999737739563" blue="0.3580000102519989" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
