--- a/Vocable/Features/Presets/Pagination/PageIndicatorCollectionViewCell.xib
+++ b/Vocable/Features/Presets/Pagination/PageIndicatorCollectionViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PageIndicatorCollectionViewCell" id="gTV-IL-0wX" customClass="PageIndicatorCollectionViewCell" customModule="EyeSpeak" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PageIndicatorCollectionViewCell" id="gTV-IL-0wX" customClass="PageIndicatorCollectionViewCell" customModule="Vocable" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="264" height="193"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
