--- a/Vocable/Features/Settings/Settings.storyboard
+++ b/Vocable/Features/Settings/Settings.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="z2O-mb-WoW">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+    <device id="ipad10_2" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -26,7 +26,7 @@
         <!--Settings-->
         <scene sceneID="dPi-vA-NKQ">
             <objects>
-                <collectionViewController id="if3-QM-p2o" customClass="SettingsCollectionViewController" customModule="EyeSpeak" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="if3-QM-p2o" customClass="SettingsCollectionViewController" customModule="Vocable" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="yYQ-tW-Cgs">
                         <rect key="frame" x="0.0" y="0.0" width="351" height="622"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -47,13 +47,13 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9rs-Gw-LBG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2306" y="144"/>
+            <point key="canvasLocation" x="2446" y="143"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="udF-jz-OFJ">
             <objects>
-                <viewController id="gMn-gX-rfc" customClass="SettingsViewController" customModule="EyeSpeak" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="mXz-yV-vIn" customClass="GazeEatingView" customModule="EyeSpeak" customModuleProvider="target">
+                <viewController id="gMn-gX-rfc" customClass="SettingsViewController" customModule="Vocable" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mXz-yV-vIn" customClass="GazeEatingView" customModule="Vocable" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -63,7 +63,7 @@
                                 <color key="textColor" name="DefaultFontColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="59L-eT-oZ6" customClass="GazeableButton" customModule="EyeSpeak" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="59L-eT-oZ6" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
                                 <rect key="frame" x="296" y="76" width="63" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="XFt-fF-4My">
@@ -123,24 +123,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f1E-o0-keE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1602" y="584"/>
+            <point key="canvasLocation" x="1601" y="143"/>
         </scene>
-        <!--View Controller-->
+        <!--Edit Sayings View Controller-->
         <scene sceneID="8J2-gW-BaT">
             <objects>
-                <viewController storyboardIdentifier="MySayings" id="KLI-zL-Q9x" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="XHU-T2-eKa" customClass="GazeEatingView" customModule="EyeSpeak" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                <viewController storyboardIdentifier="MySayings" id="KLI-zL-Q9x" customClass="EditSayingsViewController" customModule="Vocable" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XHU-T2-eKa" customClass="GazeEatingView" customModule="Vocable" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="351" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Sayings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0CD-i2-i5g">
-                                <rect key="frame" x="16" y="76" width="343" height="41"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
-                                <color key="textColor" name="DefaultFontColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DvV-sn-lWq" customClass="GazeableButton" customModule="EyeSpeak" customModuleProvider="target">
-                                <rect key="frame" x="296" y="76" width="63" height="48"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DvV-sn-lWq" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
+                                <rect key="frame" x="272" y="32" width="63" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="EHW-BN-Ezy">
                                         <variation key="heightClass=compact" constant="48"/>
@@ -160,19 +154,33 @@
                                     <userDefinedRuntimeAttribute type="image" keyPath="buttonImage" value="plus" catalog="system"/>
                                 </userDefinedRuntimeAttributes>
                             </button>
-                            <containerView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="NMW-nV-LoS">
-                                <rect key="frame" x="8" y="156" width="351" height="622"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="My Sayings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0CD-i2-i5g">
+                                <rect key="frame" x="70" y="32" width="265" height="41"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                <color key="textColor" name="DefaultFontColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <containerView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZPM-Ab-mlI">
+                                <rect key="frame" x="0.0" y="81" width="351" height="487"/>
+                                <connections>
+                                    <segue destination="W98-u1-6GB" kind="embed" id="YT0-TB-czc"/>
+                                </connections>
                             </containerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="00c-RK-HF1">
+                                <rect key="frame" x="16" y="37" width="46" height="30"/>
+                                <state key="normal" title="&lt; Settings"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" name="Background"/>
                         <constraints>
                             <constraint firstItem="DvV-sn-lWq" firstAttribute="trailing" secondItem="XHU-T2-eKa" secondAttribute="trailingMargin" id="BOU-GM-FcN"/>
-                            <constraint firstItem="KsA-J6-p6N" firstAttribute="bottom" secondItem="NMW-nV-LoS" secondAttribute="bottom" id="Ggy-BE-daj"/>
-                            <constraint firstItem="NMW-nV-LoS" firstAttribute="top" secondItem="DvV-sn-lWq" secondAttribute="bottom" constant="32" id="Kao-xV-9Uc"/>
-                            <constraint firstItem="NMW-nV-LoS" firstAttribute="leadingMargin" secondItem="XHU-T2-eKa" secondAttribute="leadingMargin" id="QW7-qC-Wbe"/>
+                            <constraint firstItem="00c-RK-HF1" firstAttribute="leading" secondItem="KsA-J6-p6N" secondAttribute="leading" constant="32" id="DYF-ei-U7N"/>
+                            <constraint firstItem="00c-RK-HF1" firstAttribute="top" secondItem="KsA-J6-p6N" secondAttribute="top" constant="32" id="HHL-nb-VtC"/>
+                            <constraint firstItem="ZPM-Ab-mlI" firstAttribute="trailing" secondItem="KsA-J6-p6N" secondAttribute="trailing" id="HHi-2E-aLn"/>
                             <constraint firstItem="0CD-i2-i5g" firstAttribute="top" secondItem="KsA-J6-p6N" secondAttribute="top" constant="32" id="QYa-BH-CYw"/>
+                            <constraint firstItem="ZPM-Ab-mlI" firstAttribute="leading" secondItem="KsA-J6-p6N" secondAttribute="leading" id="TC8-41-Ubb"/>
                             <constraint firstItem="DvV-sn-lWq" firstAttribute="top" secondItem="KsA-J6-p6N" secondAttribute="top" constant="32" id="aV6-vY-LOh"/>
-                            <constraint firstItem="NMW-nV-LoS" firstAttribute="trailing" secondItem="XHU-T2-eKa" secondAttribute="trailingMargin" id="bDJ-4l-YEv"/>
+                            <constraint firstItem="ZPM-Ab-mlI" firstAttribute="bottom" secondItem="KsA-J6-p6N" secondAttribute="bottom" id="l9q-W6-EjG"/>
                             <constraint firstItem="0CD-i2-i5g" firstAttribute="centerX" secondItem="XHU-T2-eKa" secondAttribute="centerX" id="pHB-bl-yf2"/>
                             <constraint firstItem="0CD-i2-i5g" firstAttribute="leading" secondItem="XHU-T2-eKa" secondAttribute="leadingMargin" id="sZj-YJ-CnH"/>
                         </constraints>
@@ -189,7 +197,32 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gxk-ad-LrW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3167" y="143"/>
+            <point key="canvasLocation" x="3388" y="142.61083743842366"/>
+        </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="JgZ-NN-QFW">
+            <objects>
+                <collectionViewController id="W98-u1-6GB" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="f36-Ss-9hs">
+                        <rect key="frame" x="0.0" y="0.0" width="351" height="487"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IVZ-Bw-liq">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells/>
+                        <connections>
+                            <outlet property="dataSource" destination="W98-u1-6GB" id="Syx-wi-tdg"/>
+                            <outlet property="delegate" destination="W98-u1-6GB" id="2rF-nN-oM1"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LlE-tR-CS4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4182" y="143"/>
         </scene>
     </scenes>
     <resources>
